force-app/main/default/objects/Archive_Error_Logger__c/Archive_Error_Logger__c.object-meta.xml
<CustomObject>
    <label>Archive Error Logger</label>
    <nameField>
        <label>Archive EL Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Archive Error Logger</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>