force-app/main/default/objects/Archive_Error_Logger__c/fields/Archieve_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Archieve_Expiry_Date__c</fullName>
    <formula>CreatedDate + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Archieve Expiry Date</label>
    <type>DateTime</type>
</CustomField>