force-app/main/default/objects/Archive_Error_Logger__c/fields/Brief_Description__c.field-meta.xml
<CustomField>
    <fullName>Brief_Description__c</fullName>
    <label>Brief Description</label>
    <type>TextArea</type>
</CustomField>