force-app/main/default/objects/Archive_Error_Logger__c/fields/Input__c.field-meta.xml
<CustomField>
    <fullName>Input__c</fullName>
    <label>Input</label>
    <type>TextArea</type>
</CustomField>