force-app/main/default/objects/Archive_Error_Logger__c/fields/No_of_days_remain__c.field-meta.xml
<CustomField>
    <fullName>No_of_days_remain__c</fullName>
    <formula>Archieve_Expiry_Date__c - NOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No. of days remain</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>