force-app/main/default/objects/Archive_Error_Logger__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <length>25</length>
    <type>Text</type>
</CustomField>