force-app/main/default/objects/Archive_Error_Logger__c/fields/Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Date__c</fullName>
    <label>Transaction Date</label>
    <length>40</length>
    <type>Text</type>
</CustomField>