force-app/main/default/objects/Archive_Error_Logger__c/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Name</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Archive Error Logger</relationshipLabel>
    <relationshipName>Archive_Error_Logger</relationshipName>
    <type>Lookup</type>
</CustomField>